@@ -463,7 +463,11 @@ sub _setMemValue
     my $homePathParam = $self->fieldName() . '_path';
     my $removeParam = $self->fieldName() . '_remove';
 
-    $self->{userPath} = $params->{$homePathParam};
+    # Chrome adds C:\fakepath\ to the file path for security reasons
+    my $path = $params->{$homePathParam};
+    $path =~ s/^c:\\fakepath\\//i;
+
+    $self->{userPath} = $path;
     $self->{remove} = $params->{$removeParam};
 }
 
