@@ -1,4 +1,5 @@
 HEAD
+	+ Strip the 'C:\fakepath\' that chrome adds to the file input
 	+ Make dump_exceptions key work also for mason exceptions
 	+ Pass HTTP_PROXY system environment variable to CGIs as they are
 	  used in Zentyal modules
